--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -10,11 +10,12 @@
 
 <style>
 :root{
+  --bg:#f3f4f6;
+  --card:#ffffff;
   --primary:#2563eb;
   --warn:#fef3c7;
-  --bg:#eef2ff;
-  --card:#fff;
   --text:#0f172a;
+  --muted:#64748b;
 }
 *{box-sizing:border-box}
 body{
@@ -24,19 +25,17 @@ body{
   font-family:Inter,Arial,sans-serif;
 }
 .container{
-  max-width:1100px;
+  max-width:1000px;
   margin:auto;
   background:#fff;
   border-radius:30px;
   padding:30px;
   box-shadow:0 35px 80px rgba(0,0,0,.12);
-  position:relative;
 }
-h1,h3{margin:0;font-weight:800}
-h1{margin-bottom:24px}
-h3{margin:26px 0 12px}
+h1{margin:0 0 24px;font-weight:800}
+h3{margin:26px 0 12px;font-weight:800}
 label{font-size:13px;font-weight:800;margin-top:16px;display:block}
-input,select,button{
+input,button{
   width:100%;
   padding:14px 16px;
   border-radius:18px;
@@ -57,25 +56,25 @@ button{
   margin-top:6px;
   cursor:pointer;
 }
-.lista .item:hover{background:#e2e8f0}
 .badge{
   display:inline-block;
   margin-top:10px;
-  padding:8px 16px;
+  padding:6px 14px;
   border-radius:999px;
   background:#e0f2fe;
   font-weight:800;
   font-size:12px;
 }
+.badge.warn{background:var(--warn)}
 .grid{
   display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr auto;
+  grid-template-columns:2fr 1fr 1fr auto;
   gap:8px;
 }
 .ing{
   background:#f8fafc;
   border-radius:14px;
-  padding:12px 16px;
+  padding:10px 14px;
   margin-top:6px;
   display:flex;
   justify-content:space-between;
@@ -93,63 +92,29 @@ button{
   text-align:center;
   font-weight:800;
 }
-.kpi span{display:block;margin-top:6px;font-size:18px}
-.preview{
-  width:100%;
-  max-height:220px;
-  object-fit:cover;
-  border-radius:20px;
-  margin-top:12px;
-}
-
-/* OVERLAY */
-.overlay{
-  position:absolute;
-  inset:0;
-  background:rgba(255,255,255,.75);
-  backdrop-filter:blur(2px);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:20;
-  border-radius:30px;
-}
-.overlay span{
-  font-size:18px;
-  font-weight:800;
-  color:#2563eb;
-}
 </style>
 </head>
 
 <body>
 <div class="container">
 
-<div id="overlay" class="overlay"><span>Carregando…</span></div>
-
 <h1>📋 Ficha Técnica</h1>
 
 <label>Produto (prato)</label>
 <input id="buscaProduto" placeholder="Digite o nome do produto">
 <div id="listaProduto" class="lista"></div>
-<div id="produtoBadge" class="badge" style="display:none"></div>
-
-<label>Foto do prato</label>
-<input type="file" id="fotoProduto" accept="image/*">
-<img id="previewFoto" class="preview" style="display:none">
+<div id="infoProduto" class="badge"></div>
 
 <h3>🍳 Ingredientes</h3>
 
 <label>Buscar ingrediente</label>
 <input id="buscaIngrediente" placeholder="Digite o nome do ingrediente">
 <div id="listaIngrediente" class="lista"></div>
-<div id="ingredienteBadge" class="badge" style="display:none"></div>
 
 <div class="grid">
   <input id="qtd" type="number" placeholder="Qtd usada">
-  <select id="unUso"><option>UN</option><option>KG</option><option>G</option><option>L</option><option>ML</option></select>
+  <input id="un" readonly placeholder="Un">
   <input id="custo" readonly placeholder="Custo unit">
-  <input id="rend" type="number" placeholder="Rend %">
   <button onclick="addIngrediente()">+</button>
 </div>
 
@@ -161,11 +126,12 @@ button{
 <div class="kpis">
   <div class="kpi">CMV Total<span id="cmvTotal">R$ 0,00</span></div>
   <div class="kpi">CMV Unit<span id="cmvUnit">R$ 0,00</span></div>
-  <div class="kpi">Preço Venda<span id="precoVenda">—</span></div>
-  <div class="kpi">Margem<span id="margem">—</span></div>
+  <div class="kpi">Preço Venda<span id="precoVenda">R$ 0,00</span></div>
+  <div class="kpi">Margem<span id="margem">0%</span></div>
 </div>
 
 <button onclick="salvar()" style="margin-top:28px">Salvar Ficha Técnica</button>
+
 </div>
 
 <script>
@@ -175,149 +141,97 @@ const sb = supabase.createClient(
 );
 
 let produto=null, ingrediente=null, ingredientes=[], cmv=0;
-let debounceTimer=null;
 
-const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
-const overlay=document.getElementById("overlay");
-const show=()=>overlay.style.display="flex";
-const hide=()=>overlay.style.display="none";
+const moeda=v=>"R$ "+Number(v||0).toFixed(2);
 
-/* FOTO */
-fotoProduto.onchange=()=>{
-  const f=fotoProduto.files[0];
-  if(!f)return;
-  previewFoto.src=URL.createObjectURL(f);
-  previewFoto.style.display="block";
-};
-
-/* BUSCA PRODUTO */
-buscaProduto.oninput=()=>{
-  clearTimeout(debounceTimer);
-  const termo=buscaProduto.value.trim();
-
-  if(!termo){
-    listaProduto.innerHTML="";
-    produto=null;
-    produtoBadge.style.display="none";
-    precoVenda.textContent="—";
-    render();
-    return;
-  }
-
-  if(termo.length<3){ listaProduto.innerHTML=""; return; }
-
-  debounceTimer=setTimeout(async()=>{
-    const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`);
-    const j=await r.json();
-    listaProduto.innerHTML=j.items.map(p=>`
-      <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}')">
-        ${p.descricao}
-      </div>`).join("");
-  },300);
-};
-
-async function selectProduto(id,nome){
-  show();
+/* ===== BUSCA PRODUTO ===== */
+buscaProduto.onkeyup=async()=>{
+  if(buscaProduto.value.length<2)return listaProduto.innerHTML="";
+  const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaProduto.value)}`);
+  const j=await r.json();
   listaProduto.innerHTML="";
+  j.items.forEach(p=>{
+    listaProduto.innerHTML+=`
+      <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}','${p.unidadeDeVenda||''}')">
+        ${p.descricao}
+      </div>`;
+  });
+};
+
+async function selectProduto(id,nome,un){
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j[0]||{};
-  produto={id,nome,preco:Number(p.precoVenda1)||0};
-  produtoBadge.style.display="inline-block";
-  produtoBadge.textContent=`${nome} • ${moeda(produto.preco)}`;
-  precoVenda.textContent=moeda(produto.preco);
-  hide();
+  produto={
+    id,nome,unidade:un,
+    preco:Number(p.precoVenda1)||0
+  };
+  precoVenda.innerText=moeda(produto.preco);
+  infoProduto.innerText=`Unidade: ${un} ${produto.preco===0?'• Sem preço':''}`;
+  infoProduto.className=`badge ${produto.preco===0?'warn':''}`;
+  listaProduto.innerHTML="";
   render();
 }
 
-/* INGREDIENTE */
-buscaIngrediente.oninput=()=>{
-  clearTimeout(debounceTimer);
-  const termo=buscaIngrediente.value.trim();
-  if(termo.length<3){ listaIngrediente.innerHTML=""; return; }
-
-  debounceTimer=setTimeout(async()=>{
-    const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`);
-    const j=await r.json();
-    listaIngrediente.innerHTML=j.items.map(p=>`
-      <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}')">
+/* ===== INGREDIENTES ===== */
+buscaIngrediente.onkeyup=async()=>{
+  if(buscaIngrediente.value.length<2)return listaIngrediente.innerHTML="";
+  const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaIngrediente.value)}`);
+  const j=await r.json();
+  listaIngrediente.innerHTML="";
+  j.items.forEach(p=>{
+    listaIngrediente.innerHTML+=`
+      <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}','${p.unidadeDeVenda||''}')">
         ${p.descricao}
-      </div>`).join("");
-  },300);
+      </div>`;
+  });
 };
 
-async function selectIng(id,nome){
-  show();
-  listaIngrediente.innerHTML="";
+async function selectIng(id,nome,un){
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j[0]||{};
-  ingrediente={nome,custo:p.precoMedioDeReposicao||p.custoProduto||0};
-  ingredienteBadge.style.display="inline-block";
-  ingredienteBadge.textContent=nome;
+  ingrediente={
+    nome,unidade:un,
+    custo:Number(p.precoMedioDeReposicao)||Number(p.precoFiscalDeReposicao)||Number(p.custoProduto)||0
+  };
+  un.value=un;
   custo.value=ingrediente.custo.toFixed(2);
-  hide();
+  listaIngrediente.innerHTML="";
 }
 
-/* ADD */
 function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
-  const total=qtd.value*ingrediente.custo*((rend.value||100)/100);
-  ingredientes.push({nome:ingrediente.nome,quantidade:qtd.value,un:unUso.value,total});
-  cmv+=total;
-  qtd.value=""; rend.value=""; ingrediente=null;
-  ingredienteBadge.style.display="none";
+  const t=qtd.value*ingrediente.custo;
+  ingredientes.push({...ingrediente,qtd:qtd.value,total:t});
+  cmv+=t;
+  qtd.value="";
   render();
 }
 
 function render(){
-  listaIng.innerHTML=ingredientes.map(i=>`
-    <div class="ing"><span>${i.nome} (${i.quantidade} ${i.un})</span><strong>${moeda(i.total)}</strong></div>
-  `).join("");
-  cmvTotal.textContent=moeda(cmv);
-  cmvUnit.textContent=moeda(cmv/(rendimentoFinal.value||1));
-  margem.textContent=produto?.preco?(((produto.preco-(cmv/(rendimentoFinal.value||1)))/produto.preco)*100).toFixed(1)+"%":"—";
+  listaIng.innerHTML=ingredientes.map(i=>
+    `<div class="ing"><span>${i.nome} (${i.unidade}) x ${i.qtd}</span><strong>${moeda(i.total)}</strong></div>`
+  ).join("");
+  cmvTotal.innerText=moeda(cmv);
+  cmvUnit.innerText=moeda(cmv/(rendimentoFinal.value||1));
+  margem.innerText=produto?.preco?(((produto.preco-(cmv/(rendimentoFinal.value||1)))/produto.preco)*100).toFixed(1)+"%":"0%";
 }
 
-/* SALVAR */
 async function salvar(){
-  if(!produto) return alert("Selecione um produto");
-
-  let fotoUrl=null;
-  if(fotoProduto.files[0]){
-    const file=fotoProduto.files[0];
-    const path=`${Date.now()}-${file.name}`;
-    const up=await sb.storage.from("buffet").upload(path,file,{
-      upsert:false,
-      contentType:file.type
-    });
-    if(up.error) return alert("Erro ao subir imagem");
-    fotoUrl=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
-  }
-
-const { data, error } = await sb
-  .from("buffet")
-  .insert({
-    produto_id: produto.id,
-    nome: produto.nome,
-    preco_venda: produto.preco,
-    custo_total: cmv,
-    custo_unitario: cmv/(rendimentoFinal.value||1),
-    margem_percentual: produto.preco
-      ? ((produto.preco-(cmv/(rendimentoFinal.value||1)))/produto.preco)*100
-      : null,
-    rendimento: rendimentoFinal.value,
-    foto_url: fotoUrl
-  })
-  .select()
-  .single();
-
-if (error) {
-  console.error(error);
-  alert("Erro ao salvar ficha técnica");
-  return;
+  await sb.from("ficha_tecnica").insert({
+    produto_id:produto.id,
+    produto_nome:produto.nome,
+    unidade_produto:produto.unidade,
+    preco_venda:produto.preco,
+    receita:ingredientes,
+    rendimento:rendimentoFinal.value,
+    custo_total:cmv,
+    custo_unitario:cmv/(rendimentoFinal.value||1),
+    margem_percentual:margem.innerText
+  });
+  alert("Ficha técnica salva!");
 }
-
 </script>
 </body>
 </html>
